--- a/app/assets/stylesheets/bootstrap-theme.css.scss
+++ b/app/assets/stylesheets/bootstrap-theme.css.scss
@@ -142,24 +142,31 @@
 }
 
 .navbar {
-	background:$slate;
+	background:$black;
 	@include border-radius(0);
 	margin-bottom:0;
 	color:$white;
+	padding:0;
+	min-height:0;
+	font-size:12px;
+	text-align:center;
+}
+.navbar-opaque {
+	background:rgba(0, 0, 0, 0.75);
+	padding:10px 0 20px;
 }
 .navbar-discount {
+	background:$slate;
+	text-align:left;
+	font-size:13px;
+	z-index:10000;
 	padding:25px 0;
 	p {
-		padding:0 140px;
+		padding:0 120px;
 		margin:0;
 		text-transform:uppercase;
 		u {font-weight:bold;}
 	}
-}
-.navbar-clear {
-	background:none;
-	padding:25px 0;
-	font-size:12px;
 }
 .navbar .navbar-nav > .active > a {
 }
@@ -177,7 +184,6 @@
 		text-decoration:underline;
 	}
 }
-
 .navbar-static-top,
 .navbar-fixed-top,
 .navbar-fixed-bottom {
